# crux-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
cppsrc/: CMakeLists.txt  call.cpp  class.cpp  def.cpp  function.cpp  inheritance.cpp  override.cpp  parser.cpp  parser.hpp
crux_cpp/: __init__.py  mock_summarize.py
examples/simple/: CMakeLists.txt  main.cpp  math.hpp  shapes.cpp  storage.hpp
pysrc/: fetch.py  load.py  mock_summarize.py  summarize.py  summary.py  topo.py
scripts/: runall.sh
src/: call.cpp  class.cpp  def.cpp  parser.cpp  parser.hpp
tests/: CMakeLists.txt  conftest.py  expected_call.csv  expected_def.csv  run_test.sh  test_pysrc.py
tests/simple/: CMakeLists.txt  expected_call.csv  expected_class.csv  expected_def.csv  expected_inheritance.csv  expected_override.csv  math.cpp  shapes.hpp  storage.cpp
